# yolo-train

./: pyproject.toml  requirements.txt  setup.py
cfg/: aug_args.json  aug_background_replace_args.json  aug_replace_background_2x2_only.json  coco_data.yaml  no_aug_args.json  nx2_data.yaml  nx_bdd_val.yaml  object_cut_aug_args.json
src/cfg/: aug_args.json  aug_replace_background_2x2_only.json  aug_test.json  base_aug_args.json  nx_data.yaml  nx_model.yaml  object_cut_aug_args.json
src/nx/dataset/: base_dataset.py  dali_kornia_dataset.py  dataset_filter.py  mosaic_utils.py  segment_utils.py  utils.py
src/nx/tests/: merge_multi_segment_test.py
src/nx/train/: utils.py
src/nx/utils/dataset/adapters/: adapt_images.py  filter_images.py  generate_masks.py
src/nx/utils/dataset/converters/: labelme_to_yolo.py  rejected_datasets.md
src/nx/utils/dataset/testing/: dali_cut_trasform_util.py  dali_trasform_testing_util.py  dataset_checker.py
src/nx/utils/train/: nx_dataset_validator.py  nx_yolov11_detect.py  nx_yolov11_train.py
src/src/nx/dataset/: albumentation_dataset.py  dali_kornia_dataset.py  mosaic_utils.py  utils.py
src/src/nx/tests/: segment_operations_test.py
src/src/nx/utils/dataset/adapters/: adapt_images.py  generate_standard_backgrounds.py
src/src/nx/utils/dataset/converters/: bdd_to_labelme.py  coco_to_labelme.py  filter_google_captcha_set.py  logistics_coco_to_labelme.py  mot_to_labelme.py  objects365_coco_to_labelme.py  open_images_parts_to_labelme.py  voc_to_labelme.py  (+2 more)
src/src/nx/utils/train/: nx_dataset_validator.py  nx_yolov11_train.py
(+2 files in other folders)
